--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col text-center">
+      <h1><%= @message %></h1>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-12 text-center">
+      <button type='button' class='btn btn-primary' data-reflex="click->HelloReflex#say_hi">Say Hi!</button>
+    </div>
+  </div>
+</div>
