--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,8 @@
   </div>
   <div class="row mt-5">
     <div class="col-12 text-center">
-      <button type='button' class='btn btn-primary' data-reflex="click->HelloReflex#say_hi">Say Hi!</button>
+      <button type='button' class='btn btn-primary' data-reflex="click->HelloReflex#say_hi" data-sentence='Hi'>Say Hi!</button>
+      <button type='button' class='btn btn-primary' data-reflex="click->HelloReflex#say_hi" data-sentence='Hello'>Say Hellos!</button>
     </div>
   </div>
 </div>
